[gd_scene load_steps=13 format=3 uid="uid://byf47fnn2v6w4"]

[ext_resource type="Texture2D" uid="uid://smgarqhrhkfc" path="res://graphics/ui/store/background.png" id="1_34rfk"]
[ext_resource type="Script" path="res://scenes/navigation/settings/account_management/login.gd" id="1_derfu"]
[ext_resource type="Texture2D" uid="uid://cfe8lf4sj6iq6" path="res://graphics/navigation/store/store_panel@2x.png" id="2_mkmfo"]
[ext_resource type="Texture2D" uid="uid://b5xu8rglpbsr0" path="res://graphics/ui/icons/back button@2x.png" id="4_k3e5g"]
[ext_resource type="Theme" uid="uid://7happngt6m6v" path="res://themes/for_title_lbl.tres" id="4_ylsld"]
[ext_resource type="Texture2D" uid="uid://bvii16ashhc7b" path="res://graphics/ui/buttons/2x/backPressed_btn@2x.png" id="6_jset4"]
[ext_resource type="Texture2D" uid="uid://bq6mj67xqc371" path="res://graphics/ui/icons/Sign In Btn@2x.png" id="6_lma8w"]
[ext_resource type="Theme" uid="uid://dvohq554kdv3p" path="res://themes/modal_title_label.tres" id="7_03x1f"]
[ext_resource type="Theme" uid="uid://gn482ubihrcf" path="res://themes/for_input.tres" id="7_xf33k"]
[ext_resource type="Texture2D" uid="uid://cagfcrdbw6521" path="res://graphics/ui/buttons/2x/sulodPressed_btn@2x.png" id="10_a2088"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_71lv0"]
content_margin_left = 7.0
content_margin_top = 5.0
content_margin_right = 7.0
content_margin_bottom = 13.0
texture = ExtResource("2_mkmfo")

[sub_resource type="Theme" id="Theme_2gma0"]
Panel/styles/panel = SubResource("StyleBoxTexture_71lv0")

[node name="Login" type="CanvasLayer"]
script = ExtResource("1_derfu")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_34rfk")
expand_mode = 1

[node name="LoginPnl" type="Panel" parent="."]
custom_minimum_size = Vector2(710, 380)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -194.0
offset_right = 355.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_2gma0")

[node name="AccountLbl" type="Label" parent="LoginPnl"]
custom_minimum_size = Vector2(358, 111)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = -50.5
offset_right = 179.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ylsld")
text = "AKAWNT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackBtn" type="TextureButton" parent="LoginPnl"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.147887
anchor_top = -0.107798
anchor_right = 0.0126761
anchor_bottom = 0.12156
grow_vertical = 2
texture_normal = ExtResource("4_k3e5g")
texture_pressed = ExtResource("6_jset4")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="ContentVBox" type="VBoxContainer" parent="LoginPnl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.507042
anchor_top = 0.323395
anchor_right = 0.507042
anchor_bottom = 0.486239
offset_left = -282.0
offset_top = -60.0
offset_right = 282.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LoginPnl/ContentVBox"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_03x1f")
text = "Pagsulod sa Akawnt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FirstInputHBox" type="HBoxContainer" parent="LoginPnl/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="LoginPnl/ContentVBox/FirstInputHBox"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("7_03x1f")
theme_override_colors/font_shadow_color = Color(0.431373, 0.176471, 0.0431373, 1)
theme_override_font_sizes/font_size = 25
text = "Ngalan sa tiggamit:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="LoginPnl/ContentVBox/FirstInputHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_xf33k")
theme_override_colors/font_placeholder_color = Color(0.356863, 0.121569, 0.0313726, 0.639216)
theme_override_font_sizes/font_size = 18
placeholder_text = "ngalan sa tiggamit"
alignment = 1
text_direction = 1

[node name="SecondInputHBox" type="HBoxContainer" parent="LoginPnl/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 77

[node name="Label" type="Label" parent="LoginPnl/ContentVBox/SecondInputHBox"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("7_03x1f")
theme_override_colors/font_shadow_color = Color(0.431373, 0.176471, 0.0431373, 1)
theme_override_font_sizes/font_size = 25
text = "Susi sa Akawnt:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordInput" type="LineEdit" parent="LoginPnl/ContentVBox/SecondInputHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("7_xf33k")
theme_override_colors/font_placeholder_color = Color(0.356863, 0.121569, 0.0313726, 0.639216)
theme_override_font_sizes/font_size = 18
placeholder_text = "susi sa akawnt"
alignment = 1
secret = true
text_direction = 1

[node name="LoginBtn" type="TextureButton" parent="LoginPnl"]
layout_mode = 2
offset_left = 78.0
offset_top = 291.0
offset_right = 641.0
offset_bottom = 366.0
size_flags_horizontal = 0
texture_normal = ExtResource("6_lma8w")
texture_pressed = ExtResource("10_a2088")
stretch_mode = 3

[connection signal="pressed" from="LoginPnl/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="LoginPnl/LoginBtn" to="." method="_on_login_btn_pressed"]
